# nancy

./: .gitignore  app.py  pyproject.toml  requirements.txt  run.sh
nancy/: __init__.py  config.py  diskIO.py  mailer.py  sqlORM.py  url_for_custom.py
nancy/DBManagers/: baseDB.py  productsDB.py  templateDB.py  usersDB.py
nancy/auth/: auth.py  decrators.py  forms.py
nancy/auth/templates/auth/: base.html  login.html  register.html  request_reset_password.html  reset_password.html
nancy/media_server/: media.py
nancy/seller/: forms.py  middleware.py  seller.py
nancy/seller/templates/seller/: addProduct.html  addProductSuccess.html  dashboard.html  join.html  orders.html  product_discount.html  products.html  profile.html  updateProduct.html  updateProfile.html  updateSeller.html
nancy/shop/: forms.py  shop.py
nancy/shop/templates/shop/: base.html  cart.html  checkout.html  order_sccessful.html  product.html  scribble.html  search.html  shop.html
nancy/static/css/: ProoductCarousel.css  basic_styles.css  search_bar.css  test.css
nancy/static/js/: addAddress.js  addcard.js  search.js  searchBar.js  updateProfile.js  validator.js
nancy/templates/: base.html  filters.html  pagenation.html
nancy/user/: forms.py  user.py
nancy/user/templates/user/: addAddress.html  addCard.html  address.html  cards.html  dashboard.html  orders.html  reset_password.html  scratch.html
